Added GithubMarkdownAPI Parser

--- a/src/main/resources/com/github/hinaser/gfma/localization/en.properties
+++ b/src/main/resources/com/github/hinaser/gfma/localization/en.properties
@@ -1,4 +1,8 @@
 gfmA.editor.type=GfmA
 
-gfmA.settings.name=Gfm settings
+gfmA.settings.name=GfmA settings
 gfmA.error.io-exception=IO exception.
+gfmA.error.github-unavailable=Looks like github.com is unavailable. Please check your internet connection.
+gfmA.error.github-rate-limit=Looks like you exceeded your Github API rate limit. Please set access_token in settings for gfm plugin.
+gfmA.error.github-unknown=Unknown error. Please contact developer of gfm plugin.
+gfmA.error.request-timeout=Request failed because of timeout.
