Added 'show active parser' option

--- a/src/main/resources/com/github/hinaser/gfma/localization/en.properties
+++ b/src/main/resources/com/github/hinaser/gfma/localization/en.properties
@@ -1,6 +1,6 @@
 gfmA.editor.type=GfmA
 
-gfmA.settings.name=GfmA settings
+gfmA.settings.name=Gfm-advanced
 gfmA.error.io-exception=IO exception.
 gfmA.error.github-unavailable=Looks like github.com is unavailable. Please check your internet connection.
 gfmA.error.github-bad-credential=Access token seems invalid. Please set correct access token.
